[project]
name = "react4ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "toml>=0.10.2",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
